attempt 2, to fix font on safari

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -53,7 +53,8 @@
     transform: skew(345deg, 345deg);
     font-family: 'Permanent Marker', sans-serif;
     font-weight: 400; 
-    font-style: 'normal';
+    font-style: normal;
+    font-display: swap;
     background-image: -webkit-linear-gradient(0.25turn, #00feff 0%, #ff00aa 100%);
     -webkit-background-clip: text;
     background-clip: text;
